# pitlane

./: .gitignore  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  tmpeval.yaml
.agents/: adapters.md  architecture.md  assistants.md  development.md  yaml-config.md
.bob/commands/: load-skills.md
.bob/workspace/: custom-script-refactor-plan.md  debug-log-issue-plan.md  logger-cleanup-fix-plan.md
.github/: dependabot.yml
.github/workflows/: ci.yml
agent-eval/docs/: schema.md
agent-eval/schemas/: agent-eval.schema.json
docs/: schema.md
docs/plans/: 2026-02-08-agent-eval-design.md  2026-02-08-agent-eval-implementation.md  2026-02-09-strict-assertion-schema.md  2026-02-09-verbose-mode-design.md  2026-02-09-verbose-mode-implementation.md  2026-02-10-workspace-sandbox-design.md
examples/: bob-eval.yaml  bob-github-mcp-eval.yaml  pdf-table-extraction-eval.yaml  similarity-codegen-eval.yaml  simple-codegen-eval.yaml  terraform-module-eval.yaml  weighted-grading-eval.yaml
examples/fixtures/codegen-similarity/refs/: expected-fib.py  expected-readme.md
examples/fixtures/pdf-table-extraction/: README.md  generate_pdf.py  validate_extraction.py
pitlane/docs/: schema.md
pitlane/schemas/: pitlane.schema.json
schemas/: agent-eval.schema.json  pitlane.schema.json
skills/testing-with-pitlane/: SKILL.md
src/agent_eval/: __init__.py  cli.py  config.py  editor.py  metrics.py  runner.py  schema.py  verbose.py  workspace.py
src/agent_eval/adapters/: __init__.py  base.py  claude_code.py  cline.py  codex.py  mistral_vibe.py  opencode.py  streaming.py
src/agent_eval/assertions/: __init__.py  base.py  deterministic.py  similarity.py
src/agent_eval/reporting/: html.py
src/pitlane/: __init__.py  cli.py  config.py  metrics.py  runner.py  schema.py  verbose.py  workspace.py
src/pitlane/adapters/: __init__.py  base.py  bob.py  claude_code.py  cline.py  codex.py  copilot.py  gemini.py  kilo.py  mistral_vibe.py  opencode.py  streaming.py
src/pitlane/assertions/: __init__.py  deterministic.py  similarity.py
src/pitlane/assistants/: __init__.py  base.py  bob.py  claude_code.py  mistral_vibe.py  opencode.py
src/pitlane/dashboard/: scanner.py  server.py
src/pitlane/reporting/: __init__.py  html.py  junit.py
tests/: conftest.py  helpers.py  test_adapter_bob.py  test_adapter_claude.py  test_adapter_cline.py  test_adapter_codex.py  test_adapter_copilot.py  test_adapter_gemini.py  test_adapter_kilo.py  test_adapter_opencode.py  test_adapter_vibe.py  test_adapters.py  test_assertions.py  test_assistant_bob.py  test_assistant_claude.py  test_assistant_opencode.py  test_assistant_vibe.py  test_assistants.py  test_cli.py  test_config.py  test_dashboard_scanner.py  test_dashboard_server.py  test_e2e_adapters.py  test_e2e_pipeline.py  test_integration.py  test_logger_isolation.py  test_metrics.py  test_reporting.py  test_runner.py  test_verbose.py  test_workspace.py
tests/e2e/: conftest.py  test_adapters.py  test_baseline.py  test_mcp.py  test_pipeline.py  test_repeat.py  test_skill.py
tests/e2e/fixtures/: eval-baseline.yaml  eval-mcp.yaml  eval-skill.yaml  eval.yaml  validate_hello.py
tests/e2e_fixtures/: mcp_test_server.py
(+8 files in other folders)
