[project]
name = "agent-eval"
version = "0.1.0"
description = "Lightweight harness to evaluate AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "evaluate>=0.4.6",
    "sentence-transformers>=5.2.2",
    "bert-score>=0.3.13",
    "absl-py>=2.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9.2",
    "sacrebleu>=2.6.0",
]

[project.scripts]
agent-eval = "agent_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]
