[project]
name = "pitlane"
version = "0.3.0"
description = "Lightweight harness to evaluate AI coding assistants"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pydantic>=2.0",
    "evaluate>=0.4.6",
    "sentence-transformers>=5.2.2",
    "bert-score>=0.3.13",
    "absl-py>=2.4.0",
    "rouge-score>=0.1.2",
    "nltk>=3.9.2",
    "sacrebleu>=2.6.0",
]

[project.scripts]
pitlane = "pitlane.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pitlane"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "types-pyyaml>=6.0.0",
]
